--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
     <bcpkix.version>1.65</bcpkix.version>
     <bcprov.version>1.65.01</bcprov.version>
 
-    <junit.version>4.12</junit.version>
+    <junit.version>4.13.1</junit.version>
 
     <tycho.version>1.0.0</tycho.version>
     
@@ -751,12 +751,13 @@
 			  <optional>true</optional>
 			</dependency>
 			<dependency>
-			  <groupId>com.github.spotbugs</groupId>
-			  <artifactId>spotbugs-annotations</artifactId>
-			  <version>4.0.4</version>
-			  <optional>true</optional>
-			</dependency>
+		    <groupId>com.github.spotbugs</groupId>
+		    <artifactId>spotbugs-annotations</artifactId>
+		    <version>4.1.3</version>
+		    <scope>provided</scope>
+		  </dependency>
 	    <dependency>
+	      <!-- This artefact is released under the Apache 2.0 license -->
 	      <groupId>com.google.code.findbugs</groupId>
 	      <artifactId>jsr305</artifactId>
 	      <version>3.0.2</version>
@@ -783,6 +784,7 @@
     </dependency>
     
     <dependency>
+      <!-- This artefact is released under the Apache 2.0 license -->
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>jsr305</artifactId>
     </dependency>
@@ -1089,6 +1091,40 @@
           </plugins>
         </build>
       </profile>
+   
+   <profile>
+    <id>snyk</id>
+    <build>
+      <plugins>
+        <plugin>
+	        <groupId>io.snyk</groupId>
+	        <artifactId>snyk-maven-plugin</artifactId>
+	        <version>1.2.8</version>
+	        <executions>
+            <execution>
+              <id>snyk-test</id>
+              <phase>test</phase>
+              <goals>
+                  <goal>test</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>snyk-monitor</id>
+              <phase>install</phase>
+              <goals>
+                  <goal>monitor</goal>
+              </goals>
+            </execution>
+	        </executions>
+	        <configuration>
+	            <apiToken>${snyk.api.token}</apiToken>
+	            <failOnSeverity>medium</failOnSeverity>
+	            <org></org>
+	        </configuration>
+        </plugin>
+      </plugins>
+    </build>
+   </profile>
 
    <profile>
      <id>checker</id>
